--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <div id="app">
+        <div class="hello-world"></div>
+    </div>
     <script src="dist/umd/vue.js"></script>
     <script>
         let vm = new Vue({
@@ -16,6 +19,7 @@
             data() {
                 return {
                     name: 'msg',
+                    arrNode: [1, 2, 3, 4],
                 }
             }
         });
@@ -23,6 +27,7 @@
         console.log(vm._data.name);
         setTimeout(() => {
             vm._data.name = 'tonyTang';
+            vm._data.arrNode.push(5);
         }, 1000);
     </script>
 </body>
