--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <div id="app">
-        <div class="hello-world"></div>
+    <div id="app" style="color: red;">
+        <div class="hello-world">hello {{name}}</div>
     </div>
     <script src="dist/umd/vue.js"></script>
     <script>
@@ -24,11 +24,11 @@
             }
         });
         // console.log(vm.$options)
-        console.log(vm._data.name);
-        setTimeout(() => {
-            vm._data.name = 'tonyTang';
-            vm._data.arrNode.push(5);
-        }, 1000);
+        // console.log(vm._data.name);
+        // setTimeout(() => {
+        //     vm._data.name = 'tonyTang';
+        //     vm._data.arrNode.push(5);
+        // }, 1000);
     </script>
 </body>
 
