--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
-    <div id="app" style="color: red;">
-        <div class="hello-world">hello {{name}}</div>
+    <div id="app" style="color:red">
+        hello {{name}}
+        <div style="color: green;font-size: 24px;">hello</div>
     </div>
+
     <script src="dist/umd/vue.js"></script>
     <script>
         let vm = new Vue({
@@ -25,10 +27,14 @@
         });
         // console.log(vm.$options)
         // console.log(vm._data.name);
-        // setTimeout(() => {
-        //     vm._data.name = 'tonyTang';
-        //     vm._data.arrNode.push(5);
-        // }, 1000);
+        setTimeout(() => {
+            vm._data.name = 'tonyTang';
+            vm._data.arrNode.push(5);
+            // vm._update(vm._render());
+        }, 2000);
+
+        // console.log(vm.$options)
+        // vm.$options.render();
     </script>
 </body>
 
