--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         setTimeout(() => {
             vm._data.name = 'tonyTang';
             vm._data.arrNode.push(5);
-            // vm._update(vm._render());
+            vm._update(vm._render());
         }, 2000);
 
         // console.log(vm.$options)
