--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <script>
         Vue.mixin({
             created() {
-                console.log('created .....');
+                console.log('created mixin1.....');
             },
         });
         Vue.mixin({
             created() {
-                console.log('created .....');
+                console.log('created minxin2.....');
             },
         });
         let vm = new Vue({
@@ -39,6 +39,7 @@
                 console.log('my created ....');
             },
         });
+
         // console.log(vm.$options)
         // console.log(vm._data.name);
         setTimeout(() => {
