--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <div id="app" style="color:red">
         hello {{name}}{{arrNode}}
-        <div style="color: green;font-size: 24px;">hello</div>
+        <div style="color: green;font-size: 24px;">
+            hello {{tony}}
+        </div>
     </div>
 
     <script src="dist/umd/vue.js"></script>
@@ -21,7 +23,11 @@
             data() {
                 return {
                     name: 'msg',
-                    arrNode: [1, 2, 3, 4],
+                    arrNode: [1, 2, 3, 4, { a: 2 }],
+                    tony: {
+                        name: 'tony',
+                        firstName: 'tang',
+                    },
                 }
             },
             //生命周期 就是回调函数 先订阅好，后续会触发此方法
@@ -35,6 +41,7 @@
         setTimeout(() => {
             vm._data.name = 'tonyTang';
             vm._data.arrNode.push(5);
+            vm._data.tony = { c: 100, d: 200 };
         }, 2000);
 
         window.vm = vm;
