--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             },
             watch: {
                 'name'(newValue, oldValue) {
-                    console.log(newValue);
+                    console.log(newValue, oldValue);
                 }
             },
             //生命周期 就是回调函数 先订阅好，后续会触发此方法
